make gather, organize, and publish all match. Add revised logo. Fix spacing on homepage.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -944,11 +944,11 @@ img {
 textarea {
   height: auto;
   min-height: 50px;
-  border-radius: 0; }
+  border-radius: 5px; }
 
 select {
   width: 100%;
-  border-radius: 0; }
+  border-radius: 5px; }
 
 .map_canvas img,
 .map_canvas embed,
@@ -964,7 +964,7 @@ button {
   -moz-appearance: none;
   appearance: none;
   border: 0;
-  border-radius: 0;
+  border-radius: 5px;
   background: transparent;
   line-height: 1; }
   [data-whatinput='mouse'] button {
@@ -1939,7 +1939,8 @@ kbd {
   padding: 0.125rem 0.25rem 0;
   background-color: #ecf0f1;
   font-family: Consolas, "Liberation Mono", Courier, monospace;
-  color: #0a0a0a; }
+  color: #0a0a0a;
+  border-radius: 5px; }
 
 .subheader {
   margin-top: 0.2rem;
@@ -2061,7 +2062,7 @@ textarea {
   margin: 0 0 1rem;
   padding: 0.5rem;
   border: 1px solid #95a5a6;
-  border-radius: 0;
+  border-radius: 5px;
   background-color: #fefefe;
   box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
   font-family: inherit;
@@ -2108,7 +2109,7 @@ textarea[readonly] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border-radius: 0; }
+  border-radius: 5px; }
 
 input[type='search'] {
   box-sizing: border-box; }
@@ -2158,9 +2159,9 @@ label {
   width: 100%;
   margin-bottom: 1rem; }
   .input-group > :first-child {
-    border-radius: 0 0 0 0; }
+    border-radius: 5px 0 0 5px; }
   .input-group > :last-child > * {
-    border-radius: 0 0 0 0; }
+    border-radius: 0 5px 5px 0; }
 
 .input-group-label, .input-group-field, .input-group-button, .input-group-button a,
 .input-group-button input,
@@ -2234,7 +2235,7 @@ select {
   -moz-appearance: none;
   appearance: none;
   border: 1px solid #95a5a6;
-  border-radius: 0;
+  border-radius: 5px;
   background-color: #fefefe;
   font-family: inherit;
   font-size: 1rem;
@@ -2295,7 +2296,7 @@ select {
   padding: 0.95em 1.1em;
   -webkit-appearance: none;
   border: 1px solid transparent;
-  border-radius: 0;
+  border-radius: 5px;
   transition: background-color 0.25s ease-out, color 0.25s ease-out;
   font-size: 0.9rem;
   line-height: 1;
@@ -2448,10 +2449,10 @@ select {
   list-style-type: none; }
 
 .accordion-item:first-child > :first-child {
-  border-radius: 0 0 0 0; }
+  border-radius: 5px 5px 0 0; }
 
 .accordion-item:last-child > :last-child {
-  border-radius: 0 0 0 0; }
+  border-radius: 0 0 5px 5px; }
 
 .accordion-title {
   position: relative;
@@ -2464,7 +2465,7 @@ select {
   color: #f16722; }
   :last-child:not(.is-active) > .accordion-title {
     border-bottom: 1px solid #ecf0f1;
-    border-radius: 0 0 0 0; }
+    border-radius: 0 0 5px 5px; }
   .accordion-title:hover, .accordion-title:focus {
     background-color: #ecf0f1; }
   .accordion-title::before {
@@ -2669,7 +2670,7 @@ select {
   margin: 0 0 1rem 0;
   padding: 1rem;
   border: 1px solid rgba(10, 10, 10, 0.25);
-  border-radius: 0;
+  border-radius: 5px;
   background-color: white;
   color: #0a0a0a; }
   .callout > :first-child {
@@ -2705,7 +2706,7 @@ select {
 .card {
   margin-bottom: 1rem;
   border: 1px solid #ecf0f1;
-  border-radius: 0;
+  border-radius: 5px;
   background: #fefefe;
   box-shadow: none;
   overflow: hidden;
@@ -2962,7 +2963,7 @@ select {
   padding: 1rem;
   visibility: hidden;
   border: 1px solid #95a5a6;
-  border-radius: 0;
+  border-radius: 5px;
   background-color: #fefefe;
   font-size: 1rem; }
   .dropdown-pane.is-open {
@@ -3234,7 +3235,7 @@ select {
 .label {
   display: inline-block;
   padding: 0.33333rem 0.5rem;
-  border-radius: 0;
+  border-radius: 5px;
   font-size: 0.8rem;
   line-height: 1;
   white-space: nowrap;
@@ -3550,7 +3551,7 @@ select {
     clear: both; }
   .pagination li {
     margin-right: 0.0625rem;
-    border-radius: 0;
+    border-radius: 5px;
     font-size: 0.875rem;
     display: none; }
     .pagination li:last-child, .pagination li:first-child {
@@ -3562,7 +3563,7 @@ select {
   .pagination button {
     display: block;
     padding: 0.1875rem 0.625rem;
-    border-radius: 0;
+    border-radius: 5px;
     color: #0a0a0a; }
     .pagination a:hover,
     .pagination button:hover {
@@ -3598,7 +3599,7 @@ select {
 .progress {
   height: 1rem;
   margin-bottom: 1rem;
-  border-radius: 0;
+  border-radius: 5px;
   background-color: #95a5a6; }
   .progress.primary .progress-meter {
     background-color: #f16722; }
@@ -3616,7 +3617,8 @@ select {
   display: block;
   width: 0%;
   height: 100%;
-  background-color: #f16722; }
+  background-color: #f16722;
+  border-radius: 5px; }
 
 .progress-meter-text {
   position: absolute;
@@ -3628,7 +3630,8 @@ select {
   font-size: 0.75rem;
   font-weight: bold;
   color: #fefefe;
-  white-space: nowrap; }
+  white-space: nowrap;
+  border-radius: 5px; }
 
 .slider {
   position: relative;
@@ -3666,7 +3669,7 @@ select {
   display: inline-block;
   width: 1.4rem;
   height: 1.4rem;
-  border-radius: 0;
+  border-radius: 5px;
   background-color: #f16722;
   transition: all 0.2s ease-in-out;
   -ms-touch-action: manipulation;
@@ -3753,7 +3756,7 @@ html.is-reveal-open body {
   display: none;
   padding: 1rem;
   border: 1px solid #95a5a6;
-  border-radius: 0;
+  border-radius: 5px;
   background-color: #fefefe;
   position: relative;
   top: 100px;
@@ -3842,7 +3845,7 @@ html.is-reveal-open body {
   display: block;
   width: 4rem;
   height: 2rem;
-  border-radius: 0;
+  border-radius: 5px;
   background: #95a5a6;
   transition: all 0.25s ease-out;
   font-weight: inherit;
@@ -3858,7 +3861,7 @@ html.is-reveal-open body {
     width: 1.5rem;
     height: 1.5rem;
     transform: translate3d(0, 0, 0);
-    border-radius: 0;
+    border-radius: 5px;
     background: #fefefe;
     transition: all 0.25s ease-out;
     content: ''; }
@@ -3930,7 +3933,7 @@ html.is-reveal-open body {
 table {
   width: 100%;
   margin-bottom: 1rem;
-  border-radius: 0; }
+  border-radius: 5px; }
   table thead,
   table tbody,
   table tfoot {
@@ -4067,7 +4070,7 @@ table.hover:not(.unstriped) tr:nth-of-type(even):hover {
   max-width: 100%;
   margin-bottom: 1rem;
   border: solid 4px #fefefe;
-  border-radius: 0;
+  border-radius: 5px;
   box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
   line-height: 0; }
 
@@ -4116,7 +4119,7 @@ a.thumbnail {
   z-index: 1200;
   max-width: 10rem;
   padding: 0.75rem;
-  border-radius: 0;
+  border-radius: 5px;
   background-color: #0a0a0a;
   font-size: 80%;
   color: #fefefe; }
@@ -4423,7 +4426,7 @@ POSTS & CONTENT STYLES
   padding: 0.95em 1.1em;
   -webkit-appearance: none;
   border: 1px solid transparent;
-  border-radius: 0;
+  border-radius: 5px;
   transition: background-color 0.25s ease-out, color 0.25s ease-out;
   font-size: 0.9rem;
   line-height: 1;
@@ -4642,31 +4645,22 @@ body {
 .homepageimage {
   margin: 15px; }
 
-#block2 h1 {
+#block2 h1, #block3 h1, #block4 h1 {
   font-weight: 500;
   letter-spacing: 1px;
   margin-bottom: 10px; }
 
-#block2 a > .button {
+#block2 a > .button, #block3 a > .button, #block4 a > .button {
   margin-top: 55px; }
 
-#block2 li {
+#block2 li, #block3 li, #block4 li {
   font-size: 115% !important;
   line-height: 1.8; }
 
-#block3 h2 {
-  font-weight: 400; }
-
-#block3 .row {
-  padding: 25px; }
-
-#block3 .large-8 {
-  padding: 50px; }
-
-#block4 > .row {
-  padding: 25px; }
-  #block4 > .row .large-8 {
-    padding: 50px; }
+.button.primary {
+  color: #fefefe;
+  font-weight: 500;
+  letter-spacing: 0.5px; }
 
 .menu-item > a {
   color: black !important; }
